# injectorpp

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  appveyor.yml  build.cmd
injectorpp/: BehaviorChanger.cpp  ClassResolver.cpp  FunctionResolver.cpp  SymbolInfoHelper.cpp  Utility.cpp  X86WindowsBehaviorChanger.cpp  functionobject.cpp  injectorcore.cpp  injectorpp.sln  injectorpp.vcxproj  injectorpp.vcxproj.filters
injectorpp/include/: BehaviorChanger.h  Class.h  FakeFunctions.h  Function.h  FunctionResolver.h  IClassResolver.h  IFunctionResolver.h  ResolvedType.h  SymbolEnums.h  SymbolInfoHelper.h  Utility.h  X64WindowsBehaviorChanger.h  functionobject.h  injector.h  injectorcore.h
injectorpp/vs2008/injectorpp/: injectorpp.vcproj
injectorpp/vs2008/injectorpp_demo/: injectorpp_demo.vcproj
injectorpp/vs2008/injectorpp_test/: injectorpp_test.vcproj
injectorpp_demo/: AddressTest.cpp  address.cpp  address.h  injectorpp_demo.vcxproj  injectorpp_demo.vcxproj.filters  main.cpp
injectorpp_test/: FakeClassNonVirtualMethodTest.cpp  FakeClassVirtualMethodTest.cpp  injectorpp_test.vcxproj  injectorpp_test.vcxproj.filters
injectorpp_test/Fixtures/: Address.cpp  Address.h  BaseClassTest.cpp  BaseClassTest.h  SubClassTest.cpp
linux/test/: main.cpp
src/windows/: CMakeLists.txt
src/windows/src/: behaviorchanger.cpp  behaviorchangerfactory.cpp  classresolver.cpp  functionresolver.cpp  injectorcore.cpp  symbolinfohelper.cpp  utility.cpp  x64windowsbehaviorchanger.cpp  x86windowsbehaviorchanger.cpp
tests/: CMakeLists.txt  fakeclassnonvirtualmethodtest.cpp  fakeclassvirtualmethodtest.cpp  main.cpp
tests/fixtures/: address.cpp  address.h  baseclasstest.cpp  baseclasstest.h  subclasstest.cpp  subclasstest.h
tests/gmock/: gmock.vcxproj  gmock.vcxproj.filters
windows/injectorpp/: FunctionResolver.cpp  injectorpp.sln  injectorpp.vcxproj
windows/injectorpp/include/: BehaviorChangerFactory.cpp  BehaviorChangerFactory.h  ClassResolver.h  SymbolInfoHelper.h
windows/injectorpp_test/: FakeClassVirtualMethodTest.cpp  injectorpp_test.vcxproj  injectorpp_test.vcxproj.filters
windows/injectorpp_test/Fixtures/: BaseClassTest.cpp
(+21 files in other folders)
